--- a/react/package.json
+++ b/react/package.json
@@ -39,11 +39,10 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.10.0",
     "react-scroll": "^1.8.9",
-    "react-slick": "^0.29.0",
     "react-use-keypress": "^1.3.1",
     "react-use-measure": "^2.1.1",
     "react-use-scroll-direction": "^0.1.0",
-    "slick-carousel": "^1.8.1",
+    "swiper": "^10.1.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
@@ -56,14 +55,13 @@
     "@types/react-lazy-load-image-component": "^1.5.3",
     "@types/react-leaflet": "^3.0.0",
     "@types/react-scroll": "^1.8.6",
-    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "@vitejs/plugin-react": "^3.0.0",
     "eslint": "^8.37.0",
     "eslint-plugin-react": "^7.32.2",
     "sass": "^1.60.0",
-    "typescript": "^4.9.3",
+    "typescript": "^5.1.6",
     "vite": "^4.0.0"
   }
 }
