--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "graphql": "^15.8.0",
     "graphql-middleware": "^6.1.33",
     "graphql-shield": "^7.6.5",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-tools": "^8.3.19",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
