--- a/react/package.json
+++ b/react/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.3.0",
     "framer-motion": "^10.12.21",
     "graphql": "^15.8.0",
+    "graphql-ws": "^5.14.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-avatar-editor": "^13.0.0",
@@ -42,6 +43,7 @@
     "react-use-keypress": "^1.3.1",
     "react-use-measure": "^2.1.1",
     "react-use-scroll-direction": "^0.1.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "swiper": "^10.1.0",
     "yup": "^1.1.1"
   },
