--- a/backend/package.json
+++ b/backend/package.json
@@ -28,13 +28,11 @@
     "graphql-shield": "^7.6.5",
     "graphql-subscriptions": "^2.0.0",
     "graphql-tools": "^8.3.19",
+    "graphql-upload": "^10.0.0",
     "graphql-ws": "^5.14.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.5.3",
-    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "stripe": "^12.3.0",
     "ws": "^8.13.0"
@@ -45,10 +43,9 @@
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/graphql-upload": "^16.0.0",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.12",
-    "@types/passport-facebook": "^2.1.11",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
