--- a/react/package.json
+++ b/react/package.json
@@ -15,6 +15,7 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
     "apollo-link-context": "^1.0.20",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^1.3.6",
     "chart.js": "^4.3.0",
     "framer-motion": "^10.12.21",
@@ -24,7 +25,6 @@
     "react": "^18.2.0",
     "react-avatar-editor": "^13.0.0",
     "react-chartjs-2": "^5.2.0",
-    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-faq-component": "^1.3.4",
     "react-hook-form": "^7.43.9",
@@ -48,6 +48,7 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@types/apollo-upload-client": "^17.0.2",
     "@types/js-cookie": "^3.0.3",
     "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.26",
