add admin rule && change all popups ui && add notifications for new users && updateand add products and adding reviews

--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "src/custom/.tsx", "lib/variants", "*/*.mjs"],
+  "include": ["src", "src/custom/.tsx", "src/lib/variants", "*/*.mjs"],
   "exclude": ["node_modules", "**/*.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
