--- a/react/package.json
+++ b/react/package.json
@@ -18,6 +18,7 @@
     "apollo-upload-client": "^17.0.0",
     "axios": "^1.3.6",
     "chart.js": "^4.3.0",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.12.21",
     "graphql": "^15.8.0",
     "graphql-ws": "^5.14.0",
