add parallax scroll section

--- a/package.json
+++ b/package.json
@@ -18,8 +18,5 @@
   "bugs": {
     "url": "https://github.com/Mahmoudaboelenien19/mern-graphql-E-commerce/issues"
   },
-  "homepage": "https://github.com/Mahmoudaboelenien19/mern-graphql-E-commerce#readme",
-  "dependencies": {
-    "react-router-dom": "^6.10.0"
-  }
+  "homepage": "https://github.com/Mahmoudaboelenien19/mern-graphql-E-commerce#readme"
 }
