--- a/react/package.json
+++ b/react/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
+    "@studio-freight/lenis": "^1.0.27",
     "apollo-link-context": "^1.0.20",
     "apollo-upload-client": "^17.0.0",
     "axios": "^1.3.6",
@@ -21,6 +22,7 @@
     "framer-motion": "^10.12.21",
     "graphql": "^15.8.0",
     "graphql-ws": "^5.14.0",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-avatar-editor": "^13.0.0",
     "react-dom": "^18.2.0",
@@ -28,6 +30,7 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.11.0",
+    "react-image-zoom": "^1.3.1",
     "react-lazy-load-image-component": "^1.5.6",
     "react-loader-spinner": "^5.3.4",
     "react-loading-skeleton": "^3.3.1",
@@ -36,6 +39,8 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.18.0",
     "react-scroll": "^1.8.9",
+    "react-svg": "^16.1.30",
+    "react-toggle-dark-mode": "^1.1.1",
     "react-use-keypress": "^1.3.1",
     "react-use-measure": "^2.1.1",
     "recharts": "^2.9.0",
